画像アニメーション追加

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,16 @@ h3 {
   overflow: hidden;
 }
 
+.fadein {
+  transform: translateY(50px);
+  opacity: 0;
+  transition: 1.5s ease;
+}
+.fadein.active {
+  opacity: 1;
+  transform: translateY(0);
+}
+
 header {
   width: 100%;
   height: 50px;
@@ -733,9 +743,11 @@ footer p {
 }
 #top #gallery .gallery-lists li:hover img {
   transform: scale(1.05);
+  filter: brightness(110%);
 }
 #top #gallery .gallery-lists li img {
   height: 100%;
+  filter: brightness(90%);
   transition: 0.3s ease;
 }
 
