--- a/sass/partial/_top.scss
+++ b/sass/partial/_top.scss
@@ -346,10 +346,12 @@
         
         &:hover img {
           transform: scale(1.05);
+          filter: brightness(110%);
         }
         
         img {
           height: 100%;
+          filter: brightness(90%);
           transition: .3s ease;
         }
       }
