--- a/sass/partial/_common.scss
+++ b/sass/partial/_common.scss
@@ -25,7 +25,8 @@ a {
   transition: 0.5s ease;
 
   &:hover {
-    color: m.$accent-color;
+    // color: m.$accent-color;
+    opacity: 0.8;
   }
 }
 
@@ -54,12 +55,14 @@ img {
   font-size: 1.2rem;
 }
 
-h2 {
+.section-title {
   font-size: 3.2rem;
   color: m.$accent-color;
+  margin-bottom: m.$bottom-sp;
 
   @include m.sp {
     font-size: 2.4rem;
+    margin-bottom: 40px;
   }
 }
 
@@ -72,38 +75,14 @@ h3 {
   }
 }
 
-#contact {
-  text-align: center;
-  padding-top: m.$bottom;
+.sns {
+  margin-top: 16px;
 
-  .contact-title {
-    margin-bottom: m.$bottom-sp;
-  }
+  .instagram {
+    width: 25px;
 
-  p {
-    margin-bottom: 24px;
-  }
-
-  .sns {
-    margin-bottom: 24px;
-  }
-
-  .attention {
-    font-size: m.$fs-small;
-    color: m.$accent-color;
-    margin-bottom: m.$bottom-sp;
-  }
-
-  .address {
-    margin-bottom: 24px;
-  }
-
-  iframe {
-    width: 100%;
-    height: 40vh;
-
-    @include m.sp {
-      height: 20vh;
+    img {
+      vertical-align: bottom;
     }
   }
 }
@@ -114,12 +93,12 @@ h3 {
 }
 
 .fadein {
-    transform: translateY(50px);
-    opacity: 0;
-    transition: 1.5s ease;
+  transform: translateY(50px);
+  opacity: 0;
+  transition: 1.5s ease;
 
-    &.active {
-        opacity: 1;
-        transform: translateY(0);
-    }
+  &.active {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
