--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -91,7 +91,7 @@ header {
         }
       }
 
-      .sns {
+      .header-sns {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -216,7 +216,7 @@ header {
         }
       }
 
-      .sns {
+      .header-sns {
         .instagram,
         .tel {
           @include m.tb {
