--- a/css/style.css
+++ b/css/style.css
@@ -389,7 +389,7 @@ header.active .mask {
   }
 }
 footer .footer-top {
-  background-image: url(/img/mainvisual.jpg);
+  background-image: url(../img/mainvisual.jpg);
   background-size: cover;
   position: relative;
   padding-top: 280px;
@@ -474,7 +474,7 @@ footer .footer-bottom {
 
 .mainvisual {
   height: 100vh;
-  background-image: url(/img/mainvisual.jpg);
+  background-image: url(../img/mainvisual.jpg);
   background-size: cover;
   background-position: 40% center;
   margin-bottom: 96px;
