--- a/sass/partial/_footer.scss
+++ b/sass/partial/_footer.scss
@@ -3,7 +3,7 @@
 footer {
 
   .footer-top {
-    background-image: url(/img/mainvisual.jpg);
+    background-image: url(../img/mainvisual.jpg);
     background-size: cover;
     position: relative;
     padding-top: 280px;
