--- a/sass/partial/_mainvisual.scss
+++ b/sass/partial/_mainvisual.scss
@@ -2,7 +2,7 @@
 
 .mainvisual {
   height: 100vh;
-  background-image: url(/img/mainvisual.jpg);
+  background-image: url(../img/mainvisual.jpg);
   background-size: cover;
   background-position: 40% center;
   margin-bottom: m.$bottom;
